A bit of style tweaking

--- a/app/home/home.html
+++ b/app/home/home.html
@@ -2,7 +2,9 @@
     <div class="text-center">
 
         <div class="vertical-space"></div>
-        <h1><a href="https://minhaskamal.github.io/DownGit">DownGit</a> for the <a target="_blank" href="https://github.com/Altium-Designer-addons">Altium-Designer-addons</a> project</h1>
+        <h1>DownGit</h1>
+        <div class="center-row"></div>
+        <h4>for the <a target="_blank" href="https://github.com/Altium-Designer-addons">Altium-Designer-addons</a> project</h4>
         
         <div class="vertical-space"></div>
         <div class="col-md-6 center-row">
